--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,15 +1,15 @@
 <div class="container__big-card">
   <div class="big-card__photo">
-    <img src="https://t3.ftcdn.net/jpg/02/48/42/64/360_F_248426448_NVKLywWqArG2ADUxDq6QprtIzsF82dMF.jpg"
+    <img src="{{photoCover}}"
     alt=""
     height="325px"
     srcset=""
     >
   </div>
   <div class="big-card__title">
-    <h1><a href="">Construção do componente</a></h1>
+    <h1><a href="">{{cardTitle}}</a></h1>
   </div>
   <div class="big-card__description">
-    <p><a href="">Texto para testar a construção do componente do blog!</a></p>
+    <p><a href="">{{cardDescription}}</a></p>
   </div>
 </div>
