--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,13 +1,13 @@
 <div class="container__small-card">
   <div class="container__small-card-content">
     <div class="small-card__photo">
-      <img src="https://t3.ftcdn.net/jpg/02/48/42/64/360_F_248426448_NVKLywWqArG2ADUxDq6QprtIzsF82dMF.jpg"
+      <img src="{{photoCover}}"
       alt=""
       srcset=""
     >
     </div>
     <div class="small-card__title">
-      <h3>Texto para testar construção de componente pequeno!</h3>
+      <h3>{{cardTitle}}</h3>
     </div>
   </div>
   <div class="container__small-card__separator">
