--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-home></app-home>
+<header>
+  <app-menu-bar></app-menu-bar>
+</header>
+
+<app-menu-title></app-menu-title>
 <router-outlet></router-outlet>
